# opengl

./: CMakeLists.txt  main.cpp
freeglut/include/GL/: freeglut_std.h
freeglut/src/: fg_teapot.c
math/: box2.h  box3.h  half.cpp  half.h  mat2.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
